# EMERGENCY_CALLING_AGENT

./: README.md  frontend.py  main.py  notes.txt  pyproject.toml
backend/: Ai_agent.py  main.py  tools.py
