[project]
name = "emrgency-calling-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.3",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.3",
    "ollama>=0.6.1",
    "pydantic>=2.12.4",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
    "twilio>=9.8.7",
    "uvicorn>=0.38.0",
]
